--- a/_posts/2021-01-05-AWS2.md
+++ b/_posts/2021-01-05-AWS2.md
@@ -17,3 +17,192 @@ toc:  true
   </script>
 
 ## <font color= 977FD7>AWS Global Infrastructure.</font>
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 231507.png)
+
+The AWS Cloud infrastructure is built around Regions. AWS has 22 Regions worldwide. An AWS Region is a physical geographical location with one or more Availability Zones. Availability Zones in turn consist of one or more data centers.
+
+To achieve fault tolerance and stability, Regions are isolated from one another. Resources in one Region are not automatically replicated to other Regions. When you store data in a specific Region, it is not replicated outside that Region.
+
+It is your responsibility to replicate data across Regions, if your business needs require it.
+
+AWS Regions that were introduced before March 20, 2019 are enabledby default. Regions that were introduced after March 20, 2019—such as Asia Pacific (Hong Kong) and Middle East (Bahrain)—are disabledby default. You must enable these Regions before you can use them. You can use the AWS Management Console to enable or disable a Region.
+
+Some Regions have restricted access. An Amazon AWS (China) account provides access to the Beijing and Ningxia Regions only. To learn more about AWS in China, see: https://www.amazonaws.cn/en/about-aws/china/. The isolated AWS GovCloud (US) Region is designed to allow US government agencies and customers to move sensitive workloads into the cloud by addressing their specific regulatory and compliance requirements.
+
+There are a few factors that you should consider when you select the optimal Region or Regions where you store data and use AWS services.
+
+One essential consideration is data governance and legal requirements. Local laws might require that certain information be kept within geographical boundaries. Such laws might restrict the Regions where you can offer content or services. For example, consider the European Union (EU) Data Protection Directive.
+
+All else being equal, it is generally desirable to run your applications and store your data in a Region that is as close as possible to the user and systems that will access them. This will help you reduce latency. CloudPing is one website that you can use to test latency between your location and all AWS Regions.
+
+Finally, there is some variation in the costof running services, which can depend on which Region you choose. For example, as of this writing, running an On-Demand t3.medium size Amazon Elastic Compute Cloud (Amazon EC2) Linux instance in the US East (Ohio) Region costs $0.0416 per hour, but running the same instance in the Asia Pacific (Tokyo) Region costs $0.0544 per hour.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 231654.png)
+
+Each AWS Region has multiple, isolated locations that are known asAvailability Zones.
+
+Each Availability Zone provides the ability to operate applications and databases that are more highly available, fault-tolerant, and scalable than would be possible with a single data center. Each Availability Zone can include multiple data centers (typically three), and at full-scale, they can include hundreds of thousands of servers. They are fully isolated partitions of the AWS Global Infrastructure. Availability Zones have their own power infrastructure, andthey are physically separated by many kilometers from other Availability Zones—though all Availability Zones are within 100 km of each other.
+
+All Availability Zones are interconnected with high-bandwidth, low-latency networking over fully redundant, dedicated fiber that provides high-throughput between Availability Zones. The network accomplishes synchronous replication between Availability Zones.
+
+Availability Zones help build highly available applications. When an application is partitioned across Availability Zones, companies are better isolated and protected from issues such as lightning, tornadoes, earthquakes, and more.
+
+You are responsible for selecting the Availability Zones where your systems will reside. Systems can span multiple Availability Zones. AWS recommends replicating across Availability Zones for resiliency. You should design your systems to survive the temporary or prolonged failure of an Availability Zone if a disaster occurs.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 231833.png)
+
+The foundation for the AWS infrastructure is the data centers. Customers do not specify a data center for the deployment of resources. Instead, an Availability Zone is the most granular level of specification that a customer can make. However, a data center is the location where the actual data resides. Amazon operates state-of-the-art, highly available data centers. Although rare, failures can occur that affect the availability of instances in the same location. If you host all your instances in a single location that is affected by such a failure, none of your instances will be available.
+
+Data centers are securely designed with several factors in mind:
+- Each location is carefully evaluated to mitigate environmental risk.
+- Data centers have a redundant design that anticipates and tolerates failure while maintaining service levels.
+- To ensure availability, critical system components are backed upacross multiple Availability Zones.
+- To ensure capacity, AWS continuously monitors service usage to deploy infrastructure to support availability commitments and requirements.
+- Data center locations are not disclosedand all access to them is restricted.
+- In case of failure, automated processes move data traffic away from the affected area.
+
+AWS uses custom network equipment sourced from multiple original device manufacturers (ODMs). ODMs design and manufacture products based on specifications from a second company. The second company then rebrands the products for sale.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 231949.png)
+
+Amazon CloudFront is a content delivery network(CDN) used to distribute content to end users to reduce latency. Amazon Route 53 is a Domain Name System (DNS) service. Requests going to either one of these services will be routed to the nearest edge location automatically in order to lower latency.
+
+AWS Points of Presenceare located in most of the major cities (69 cities in total) across 30countries around the world. By continuously measuring internet connectivity, performance and computing to find the best way to route requests, the Points of Presence deliver a better near real-time user experience. They are used by many AWS services, including Amazon CloudFront, Amazon Route 53, AWS Shield, and AWS Web Application Firewall (AWSWAF) services.
+
+Regional edge cachesare used by default with Amazon CloudFront. Regional edge caches are used when you have content that is not accessed frequently enough to remain in an edge location. Regional edge caches absorb this content and provide an alternative to that content having to be fetched from the origin server.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 232045.png)
+
+Now that you have a good understanding of the major components that comprise the AWS Global Infrastructure, let's consider the benefits provided by this infrastructure.
+
+The AWS Global Infrastructure has several valuable features:
+- First, it is elasticand scalable. This means resources can dynamically adjust to increases or decreases in capacity requirements. It can also rapidly adjust to accommodate growth.
+- Second, this infrastructure isfault tolerant, which means it has built-in component redundancy which enables it to continue operations despite a failed component.
+- Finally, it requires minimal to no human intervention, while providing high availabilitywith minimal down time.
+
+## <font color= 977FD7>AWS Service and Service Category Overview.</font>
+
+AWS offers a broad set of global cloud-based products that can be used as building blocks for common cloud architectures. Here is a look at how these cloud based products are organized.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 232255.png)
+
+As discussed previously, the AWS Global Infrastructure can be broken down into three elements: Regions, Availability Zones, and Points of Presence, which include edge locations. This infrastructure provides the platform for a broad set of services, such as networking, storage, compute services, and databases—and these services are delivered as an on-demand utility that is available in seconds, with pay-as-you-go pricing.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 232514.png)
+
+AWS offers a broad set of cloud-based services. There are 23 different product or service categories, and each category consists of one or more services. This course will not attempt to introduce you to each service. Rather, the focus of this course is on the services that are most widely used and offer the best introduction to the AWS Cloud. This course also focuses on services that are more likely to be covered in the AWS Certified Cloud Practitioner exam.
+
+The categories that this course will discuss are highlighted on the slide: Compute, Cost Management, Database, Management and Governance, Networking and Content Delivery, Security, Identity, and Compliance, and Storage.
+
+All AWS products are organized into the service categories that are shown here. For example, if you click Compute, you will see that Amazon Elastic Compute Cloud (Amazon EC2) is first on the list. The compute category also lists many other products and services.
+
+If you click Amazon EC2, it takes you to the Amazon EC2 page. Each product page provides a detailed description of the product and lists some of its benefits.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 232655.png)
+
+AWS storage services include the services listed here, and many others.
+
+**Amazon Simple Storage Service (Amazon S3)** is an object storage service that offers scalability, data availability, security, and performance. Use it to store and protect any amount of data for websites, mobile apps, backup and restore, archive, enterprise applications, Internet of Things (IoT) devices, and big data analytics.
+
+**Amazon Elastic Block Store (Amazon EBS)** is high-performance block storage that is designed for use with Amazon EC2 for both throughput and transaction intensive workloads. It is used for a broad range of workloads, such as relational and non-relational databases, enterprise applications, containerized applications, big data analytics engines, file systems, and media workflows.
+
+**Amazon Elastic File System (Amazon EFS)** provides a scalable, fully managed elastic Network File System (NFS) file system for use with AWS Cloud services and on-premises resources. It is built to scale on demand to petabytes, growing and shrinking automatically as you add and remove files. It reduces the need to provision and manage capacity to accommodate growth.
+
+**Amazon Simple Storage Service Glacier** is a secure, durable, and extremely low-cost AmazonS3 cloud storage class for data archiving and long-term backup. It is designed to deliver 11 9s of durability, and to provide comprehensive security and compliance capabilities to meet stringent regulatory requirements.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 232800.png)
+
+AWS compute services include the services listed here, and many others.
+
+**Amazon Elastic Compute Cloud (Amazon EC2)** provides resizable compute capacity as virtual machines in the cloud.
+
+**Amazon EC2 Auto Scaling** enables you to automatically add or remove EC2 instances according to conditions that you define.
+
+**Amazon Elastic Container Service (Amazon ECS)** is a highly scalable, high-performance container orchestration service that supports Docker containers.
+
+**Amazon Elastic Container Registry (Amazon ECR)** is a fully-managed Docker container registry that makes it easy for developers to store, manage, and deploy Docker container images.
+
+**AWS Elastic Beanstalk** is a service for deploying and scaling web applications and services on familiar servers such as Apache and Microsoft Internet Information Services (IIS).
+
+**AWS Lambda** enables you to run code without provisioning or managing servers. You pay only for the compute time that you consume. There is no charge when your code is not running.
+
+**Amazon Elastic Kubernetes Service (Amazon EKS)** makes it easy to deploy, manage, and scale containerized applications that use Kubernetes on AWS.
+
+**AWS Fargate** is a compute engine for Amazon ECS that allows you to run containers without having to manage servers or clusters
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 233006.png)
+
+AWS database services include the services listed here, and many others.  
+
+**Amazon Relational Database Service (Amazon RDS)** makes it easy to set up, operate, and scale a relational database in the cloud. It provides resizable capacity while automating time-consuming administration tasks such as hardware provisioning, database setup, patching, and backups.
+
+**Amazon Aurora** is a MySQL and PostgreSQL-compatible relational database. It is up to five times faster than standard MySQL databases and three times faster than standard PostgreSQL databases.
+
+**Amazon Redshift** enables you to run analytic queries against petabytes of data that is stored locally in Amazon Redshift, and directly against exabytes of data that are stored in Amazon S3. It delivers fast performance at any scale.
+
+**Amazon DynamoDB** is a key-value and document database that delivers single-digit millisecond performance at any scale, with built-in security, backup and restore, and in-memory caching.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 233109.png)
+
+AWS networking and content delivery services include the services listed here, and many others.
+
+**Amazon Virtual Private Cloud (Amazon VPC)** enables you to provision logically isolated sections of the AWS Cloud.
+
+**Elastic Load Balancing** automatically distributes incoming application traffic across multiple targets, such as Amazon EC2 instances, containers, IP addresses, and Lambda functions.
+
+**Amazon CloudFront** is a fast content delivery network (CDN) service that securely delivers data, videos, applications, and application programming interfaces (APIs) to customers globally, with low latency and high transfer speeds.
+
+**AWS Transit Gateway** is a service that enables customers to connect their Amazon Virtual Private Clouds (VPCs) and their on-premises networks to a single gateway.
+
+**Amazon Route 53** is a scalable cloud Domain Name System (DNS) web service designed to give you a reliable way to route end users to internet applications. It translates names (like www.example.com) into the numeric IP addresses (like 192.0.2.1) that computers use to connect to each other.
+
+**AWS Direct Connect** provides a way to establish a dedicated private network connection from your data center or office to AWS, which can reduce network costs and increase bandwidth throughput.
+
+**AWS VPN** provides a secure private tunnel from your network or device to the AWS global network.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 233316.png)
+
+AWS security, identity, and compliance services include the services listed here, and many others.
+
+**AWS Identity and Access Management (IAM)** enables you to manage access to AWS services and resources securely. By using IAM, you can create and manage AWS users and groups. You can use IAM permissions to allow and deny user and group access to AWS resources.
+
+**AWS Organizations** allows you to restrict what services and actions are allowed in your accounts.
+
+**Amazon Cognito** lets you add user sign-up, sign-in, and access control to your web and mobile apps.
+
+**AWS Artifact** provides on-demand access to AWS security and compliance reports and select online agreements.
+
+**AWS Key Management Service (AWS KMS)** enables you to create and manage keys. You can use AWS KMS to control the use of encryption across a wide range of AWS services and in your applications.
+
+**AWS Shield** is a managed Distributed Denial of Service (DDoS) protection service that safeguards applications running on AWS
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 233451.png)
+
+AWS cost management services include the services listed here, and others.
+
+**The AWS Cost and Usage Report** contains the most comprehensive set of AWS cost andusage data available, including additional metadata about AWS services, pricing, and reservations.
+
+**AWS Budgets** enables you to set custom budgets that alert you when your costs or usage exceed (or are forecasted to exceed) your budgeted amount.
+
+**AWS Cost Explorer** has an easy-to-use interface that enables you to visualize, understand, and manage your AWS costs and usage over time.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-05 233549.png)
+
+AWS management and governance services include the services listed here, and others.
+
+**The AWS Management Console** provides a web-based user interface for accessing your AWS account.
+
+**AWS Config** provides a service that helps you track resource inventory and changes.
+
+**Amazon CloudWatch** allows you to monitor resources and applications.
+
+**AWS Auto Scaling** provides features that allow you to scale multiple resources to meet demand.
+
+**AWS Command Line Interface** provides a unified tool to manage AWS services.
+
+**AWS Trusted Advisor** helps you optimize performance and security.
+
+**AWS Well-Architected Tool** provides help in reviewing and improving your workloads.
+
+**AWS CloudTrail** tracks user activity and API usage.
