--- a/_posts/2021-01-05-AWS2.md
+++ b/_posts/2021-01-05-AWS2.md
@@ -350,3 +350,88 @@ The example IAM policy grants users access only to the following resources:
 - The AWS account's S3 bucket, whose name is represented by bucket-name and all the objects that it contains.
 
 The IAM policy also includes an explicit deny ("Effect":"Deny") element. The NotResource element helps to ensure that users cannot use any other DynamoDB or S3 actions or resources except the actions and resources that are specified in the policy—even if permissions have been granted in another policy. An explicit deny statement takes precedence over an allow statement.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233036.png)
+
+IAM policies enable you to fine-tune privileges that are granted to IAM users, groups, and roles.
+
+When IAM determines whether a permission is allowed, IAM first checks for the existence of any applicable explicit denial policy. If no explicit denial exists, it then checks for any applicable explicit allow policy. If neither an explicit deny nor an explicit allow policy exists, IAM reverts to the default, which is to deny access. This process is referred to as an implicit deny. The user will be permitted to take the action only if the requested action is not explicitly denied and isexplicitly allowed.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233220.png)
+
+An IAM groupis a collection of IAM users. IAM groups offer a convenient way to specify permissions for a collection of users, which can make it easier to manage the permissions for those users.
+
+For example, you could create an IAM group that is called Developersand attach an IAM policy or multiple IAM policies to the Developers group that grant the AWS resource access permissions that developers typically need. Any user that you then add to the Developer group will automatically have the permissions that are assigned to the group. In such a case, you do not need to attach the IAM policy or IAM policies directly to the user. If a new user joins your organization and should be granted developer privileges, you can simply add that user to the Developers group. Similarly, if a person changes jobs in your organization, instead of editing that user's permissions, simply remove the user from the group.
+
+Important characteristics of IAM groups:
+- A group can contain many users, and a user can belong to multiple groups.
+- Groups cannot be nested. A group can contain only users, and a group cannot contain other groups.
+- There is no default group that automatically includes all users in the AWS account. If you want to have a group with all account users in it, you need to create the group and add each new user to it
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233326.png)
+
+An IAM role is an IAM identity you can create in your account that has specific permissions. An IAM role is similar to an IAM user because it is also an AWS identity that you can attach permissions policies to, and those permissions determine what the identity can and cannot do in AWS. However, instead of being uniquely associated with one person, a role is intended to be assumable by anyone who needs it. Also, a role does not have standard long-term credentials such as a password or access keys associated with it. Instead, when you assume a role, the role provides you with temporary security credentials for your role session.
+
+You can use roles to delegate access to users, applications, or services that do not normally have access to your AWS resources. For example, you might want to grant users in your AWS account access to resources they don't usually have, or grant users in one AWS account access to resources in another account. Or you might want to allow a mobile app to use AWS resources, but you do not want to embed AWS keys within the app (where the keys can be difficult to rotate and where users can potentially extract them and misuse them). Also, sometimes you may want to grant AWS access to users who already have identities that are defined outside of AWS, such as in your corporate directory. Or, you might want to grant access to your account to third parties so that they can perform an audit on your resources.
+
+For all of these example use cases, IAM roles are an essential component to implementing the cloud deployment
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233446.png)
+
+In the diagram, a developer runs an application on an EC2 instance that requires access to the S3 bucket that is named photos. An administrator creates the IAM role and attaches the role to the EC2 instance. The role includes a permissions policy that grants read-only access to the specified S3 bucket. It also includes a trust policy that allows the EC2 instance to assume the role and retrieve the temporary credentials. When the application runs on the instance, it can use the role's temporary credentials to access the photos bucket. The administrator does not need to grant the application developer permission to access the photos bucket, and the developer never needs to share or manage credentials.
+
+## <font color= 977FD7>Securing a new AWS account.</font>
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233629.png)
+
+When you first create an AWS account, you begin with a single sign-in identity that has complete access to all AWS services and resources in the account. This identity is called the AWS account root user and it is accessed by signing into the AWS Management Console with the email address and password that you used to create the account. AWS account root users have (and retain) full access to all resources in the account. Therefore, AWS strongly recommends that you do not use account root user credentials for day-to-day interactions with the account.
+
+Instead, AWS recommends that you use IAM to create additional users and assign permissions to these users, following the principle of least privilege. For example, if you require administrator-level permissions, you can create an IAM user, grant that user full access, and then use those credentials to interact with the account. Later, if you need to revoke or modify your permissions, you can delete or modify any policies that are associated with that IAM user.
+
+Additionally, if you have multiple users that require access to the account, you can create unique credentials for each user and define which user will have access to which resources. For example, you can create IAM users with read-only access to resources in your AWS account and distribute those credentials to users that require read access. You should avoid sharing the same credentials with multiple users.
+
+While the account root user should not be used for routine tasks, there are a few tasks that can only be accomplished by logging in as the account root user. A full list of these tasks is detailed on the Tasks that require root user credentialsAWS documentation page.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233726.png)
+
+To stop using the account root user, take the following steps:
+
+1.   While you are logged into the account root user, create an IAM user for yourself with AWS Management Console access enabled (but do not attach any permissions to the user yet). Save the IAM user access keys if needed.
+
+2.   Next, create an IAM group, give it a name (such as FullAccess), and attach IAM policies to the group that grant full access to at least a few of the services you will use. Next, add the IAM user to the group.
+
+3.   Disable and remove your account root user access keys, if they exist.
+
+4.   Enable a password policy for all users. Copy the IAM users sign-in link from the IAM Dashboard page. Then, sign out as the account root user.
+
+5.   Browse to the IAM users sign-in link that you copied, and sign in to the account by using your new IAM user credentials.
+
+6.   Store your account root user credentials in a secure place.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233819.png)
+
+Another recommended step for securing a new AWS account is to require multi-factor authentication (MFA) for the account root user login and for all other IAM user logins. You can also use MFA to control programmatic access.
+
+You have a few options for retrieving the MFA token that is needed to log in when MFA is enabled. Options include virtual MFA-compliant applications (such as Google Authenticator and Authy Authenticator), U2F security key devices, and hardware MFA options that provide a key fob or display card.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 233903.png)
+
+AWS CloudTrail is a service that logs all API requests to resources in your account. In this way, it enables operational auditing on your account.
+
+AWS CloudTrail is enabled on account creation by default on all AWS accounts, and it keeps a record of the last 90 days of account management event activity. You can view and download the last 90 days of your account activity for create, modify, and delete operations of services that are supported by CloudTrail without needing to manually create another trail. To enable CloudTrail log retention beyond the last 90 days and to enable alerting whenever specified events occur, create a new trail (which is described at a high level on the slide). For detailed step-by-step instructions about how to create a trail in AWS CloudTrail, see creating a trailin the AWS documentation.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 234009.png)
+
+An additional recommended step for securing a new AWS account is to enable billing reports, such as the AWS Cost and Usage Report. Billing reports provide information about your use of AWS resources and estimated costs for that use. AWS delivers the reports to an Amazon S3 bucket that you specify and AWS updates the reports at least once per day.
+
+The AWS Cost and Usage Report tracks usage in the AWS account and provides estimated charges, either by the hour or by the day.
+
+## <font color= 977FD7>Securing accounts.</font>
+
+AWS Organizations is an account management service that enables you to consolidate multiple AWS accounts into an organization that you create and centrally manage. Here, the focus is on the security features that AWS Organizations provides.
+
+One helpful security feature is that you can group accounts into organizational units (OUs) and attach different access policies to each OU. For example, if you have accounts that should only be allowed to access AWS services that meet certain regulatory requirements, you can put those accounts into one OU. You then can define a policy that blocks OU access to services that do not meet those regulatory requirements, and then attach the policy to the OU.
+
+Another security feature is that AWS Organizations integrates with and supports IAM.AWS Organizations expands that control to the account level by giving you control over what users and roles in an account or a group of accounts can do. The resulting permissions are the logical intersection of what is allowed by the AWS Organizations policy settings and what permissions are explicitly granted by IAM in the account for that user or role. The user can access only what is allowed by both the AWS Organizations policies and IAM policies. 
+
+Finally, AWS Organizations provides service control policies (SCPs) that enable you to specify the maximum permissions that member accounts in the organization can have. In SCPs, you
