--- a/_posts/2021-01-05-AWS2.md
+++ b/_posts/2021-01-05-AWS2.md
@@ -428,6 +428,8 @@ The AWS Cost and Usage Report tracks usage in the AWS account and provides estim
 
 ## <font color= 977FD7>Securing accounts.</font>
 
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 234701.png)
+
 AWS Organizations is an account management service that enables you to consolidate multiple AWS accounts into an organization that you create and centrally manage. Here, the focus is on the security features that AWS Organizations provides.
 
 One helpful security feature is that you can group accounts into organizational units (OUs) and attach different access policies to each OU. For example, if you have accounts that should only be allowed to access AWS services that meet certain regulatory requirements, you can put those accounts into one OU. You then can define a policy that blocks OU access to services that do not meet those regulatory requirements, and then attach the policy to the OU.
@@ -435,3 +437,45 @@ One helpful security feature is that you can group accounts into organizational 
 Another security feature is that AWS Organizations integrates with and supports IAM.AWS Organizations expands that control to the account level by giving you control over what users and roles in an account or a group of accounts can do. The resulting permissions are the logical intersection of what is allowed by the AWS Organizations policy settings and what permissions are explicitly granted by IAM in the account for that user or role. The user can access only what is allowed by both the AWS Organizations policies and IAM policies.
 
 Finally, AWS Organizations provides service control policies (SCPs) that enable you to specify the maximum permissions that member accounts in the organization can have. In SCPs, you can restrict which AWS services, resources, and individual actions the users and roles in each member account can access. These restrictions even override the administrators of member accounts. When AWS Organizations blocks access to a service, resource, or API action, a user or role in that account can't access it, even if an administrator of a member account explicitly grants such permissions.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 234810.png)
+
+Here is a closer look at the Service control policies (SCPs) feature of AWS Organizations.
+
+SCPs offer central control over the maximum available permissions for all accounts in your organization, enabling you to ensure that your accounts stay in your organization’s access control guidelines. SCPs are available only in an organization that has all features enabled, including consolidated billing. SCPs aren't available if your organization has enabled only the consolidated billing features.
+
+SCPs are similar to IAM permissions policiesand they use almost the same syntax. However, an SCP never grants permissions. Instead, SCPs are JSON policies that specify the maximum permissions for an organization or OU. Attaching an SCP to the organization root or an organizational unit (OU) defines a safeguard for the actions that accounts in the organization root or OU can do. However, it is not a substitute for well-managed IAM configurations within each account. You must still attach IAM policies to users and roles in your organization's accounts to actually grant permissions to them.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 234935.png)
+
+AWS Key Management Service (AWS KMS) is a service that enables you to create and manage encryption keys, and to control the use of encryption across a wide range of AWS services and your applications. AWS KMS is a secure and resilient service that uses hardware security modules (HSMs) that were validated under Federal Information ProcessingStandards (FIPS) 140-2(or are in the process of being validated) to protect your keys. AWS KMS also integrates with AWS CloudTrail to provide you with logs of all key usage to help meet your regulatory and compliance needs.
+
+Customer master keys (CMKs) are used to control access to data encryption keys that encrypt and decrypt your data. You can create new keys when you want, and you can manage who has access to these keys and who can use them. You can also import keys from your own key management infrastructure into AWS KMS.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 235005.png)
+
+Amazon Cognito provides solutions to control access to AWS resources from your application. You can define roles and map users to different roles so your application can access only the resources that are authorized for each user.
+
+Amazon Cognito uses common identity management standards, such as Security Assertion Markup Language (SAML) 2.0. SAML is an open standard for exchanging identity and security information with applications and service providers. Applications and service providers that support SAML enable you to sign in by using your corporate directory credentials, such as your user name and password from Microsoft Active Directory. With SAML, you can use single sign-on (SSO) to sign in to all of your SAML-enabled applications by using a single set of credentials.
+
+Amazon Cognito helps you meet multiple security and compliance requirements, including requirements for highly regulated organizations such as healthcare companies and merchants. Amazon Cognito is eligible for use with the US Health Insurance Portability and Accountability Act (HIPAA). It can also be used for workloads that are compliant with the Payment Card Industry Data Security Standard (PCI DSS); the American Institute of CPAs (AICPA) Service Organization Control (SOC); the International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC) standardsISO/IEC 27001,ISO/IEC 27017, andISO/IEC 27018; andISO 9001.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 235122.png)
+
+AWS Shield is a managed distributed denial of service (DDoS) protection service that safeguards applications that run on AWS. It provides always-on detection and automatic inline mitigations that minimize application downtime and latency, so there is no need to engage AWS Support to benefit from DDoS protection.
+
+AWS Shield helps protects your website from all types of DDoS attacks, including Infrastructure layer attacks (like User Datagram Protocol—or UDP—floods), state exhaustion attacks (like TCP SYN floods), and application-layer attacks (like HTTP GET or POST floods).
+
+AWS Shield Standard is automatically enabled to all AWS customers at no additional cost.
+
+AWS Shield Advanced is an optional paid service. AWS Shield Advanced provides additional protections against more sophisticated and larger attacks for your applications that run on Amazon EC2, Elastic Load Balancing, Amazon CloudFront, AWS Global Accelerator, and Amazon Route 53. AWS Shield Advanced is available to all customers. However, to contact the DDoS Response Team, customers need to have either Enterprise Support or Business Support from AWS Support.
+
+## <font color= 977FD7>Securing data on AWS.</font>
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-07 235240.png)
+
+Data encryption is an essential tool to use when your objective is to protect digital data. Data encryption takes data that is legible and encodes it so that it is unreadable to anyone who does not have access to the secret key that can be used to decode it. Thus, even if an attacker gains access to your data, they cannot make sense of it.  
+
+Data at rest refers to data that is physically stored on disk or on tape.
+
+You can create encrypted file systems on AWS so that all your data and metadata is encrypted at rest by using the open standard Advanced Encryption Standard (AES)-256 encryption algorithm. When you use AWS KMS, encryption and decryption are handled automatically and transparently, so that you do not need to modify your applications. If your organization is subject to corporate or regulatory policies that require encryption of data and metadata at rest, AWS recommends  enabling encryption on all services that store your data. You can encrypt data stored in any service that is supported by AWS KMS.
