--- a/_posts/2021-01-05-AWS2.md
+++ b/_posts/2021-01-05-AWS2.md
@@ -479,3 +479,48 @@ Data encryption is an essential tool to use when your objective is to protect di
 Data at rest refers to data that is physically stored on disk or on tape.
 
 You can create encrypted file systems on AWS so that all your data and metadata is encrypted at rest by using the open standard Advanced Encryption Standard (AES)-256 encryption algorithm. When you use AWS KMS, encryption and decryption are handled automatically and transparently, so that you do not need to modify your applications. If your organization is subject to corporate or regulatory policies that require encryption of data and metadata at rest, AWS recommends  enabling encryption on all services that store your data. You can encrypt data stored in any service that is supported by AWS KMS.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-08 204222.png)
+
+Data in transit refers to data that is moving across the network. Encryption of data in transit is accomplished by using Transport Layer Security (TLS) 1.2 with an open standard AES-256 cipher. TLS was formerly called Secure Sockets Layer (SSL).
+
+AWS Certificate Manageris a service that enables you to provision, manage, and deploy SSL or TLS certificates for use with AWS services and your internal connected resources. SSL or TLS certificates are used to secure network communications and establish the identity of websites over the internet, and also resources on private networks. With AWS Certificate Manager, you can request a certificate and then deploy it on AWS resources (such as load balancers or CloudFront distributions).  AWS Certificate Manager also handles certificate renewals.
+
+Web traffic that runs over HTTP is not secure. However, traffic that runs over Secure HTTP (HTTPS) is encrypted by using TLS or SSL. HTTPS traffic is protected against eavesdropping and man-in-the-middle attacks because of the bidirectional encryption of the communication.
+
+AWS services support encryption for data in transit. Two examples of encryption for data in transit are shown. The first example shows an EC2 instance that has mounted an Amazon EFS shared file system. All data traffic between the instance and Amazon EFS is encrypted by using TLS or SSL.
+
+The second example shows the use of AWS Storage Gateway, a hybrid cloud storage service that provides on-premises access to AWS Cloud storage. In this example, the storage gateway is connected across the internet to Amazon S3, and the connection encrypts the data in transit.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-08 204402.png)
+
+By default, all Amazon S3 buckets are private and can be accessed onlyby users who are explicitly granted access.  It is essential to manage and control access to Amazon S3 data. AWS provides many tools and options for controlling access to your S3 buckets or objects, including:
+- Using Amazon S3 Block Public Access. These settings override any other policies or object permissions. Enable Block Public Access for all buckets that you don't want to be publicly accessible. This feature provides a straightforward method for avoiding unintended exposure of Amazon S3 data.
+- Writing IAM policiesthat specify the users or roles that can access specific buckets and objects. This method was discussed in detail earlier in this module.
+- Writing bucket policiesthat define access to specific buckets or objects.  This option is typically used when the user or system cannot authenticate by using IAM. Bucket policies can be configured to grant access across AWS accounts or to grant public or anonymous access to Amazon S3 data. If bucket policies are used, they should be written carefully and tested fully. You can specify a deny statement in a bucket policy to restrict access. Access will be restricted even if the users have permissions that are granted in an identity-based policy that is attached to the users.
+- Setting access control lists (ACLs) on your buckets and objects. ACLs are less commonlyused (ACLs predate IAM). If you do use ACLs, do not set access that is too open or permissive.
+- AWS Trusted Advisor provides a bucket permission check feature that is a useful tool for discovering if any of the buckets in your account have permissions that grant global access.
+
+## <font color= 977FD7>Working to ensure compliance.</font>
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-08 204547.png)
+
+AWS engages with external certifying bodies and independent auditors to provide customers with information about the policies, processes, and controls that are established and operated by AWS.
+
+As an example of a certificationfor which you can use AWS services to meet your compliance goals, consider the ISO/IEC 27001:2013certification. It specifies the requirements for establishing, implementing, maintaining, and continually improving an Information Security Management System. The basis of this certification is the development and implementation of a rigorous security program, which includes the development and implementation of an Information Security Management System. The Information Security Management System defines how AWS perpetually manages security in a holistic, comprehensive manner.
+
+AWS also provides security features and legal agreements that are designed to help support customers with common regulations and laws. One example is the Health Insurance Portability and Accountability Act (HIPAA) regulation. Another example, the European Union (EU) General Data Protection Regulation (GDPR) protects European Union data subjects' fundamental right to privacy and the protection of personal data. It introduces robust requirements that will raise and harmonize standards for data protection, security, and compliance. The GDPR Centercontains many resources to help customers meet theircompliance requirements with this regulation.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-08 204642.png)
+
+AWS Configis a service that enables you to assess, audit, and evaluate the configurations of your AWS resources. AWS Config continuously monitors and records your AWS resource configurations, and it enables you to automate the evaluation of recorded configurations against desired configurations. With AWS Config, you can review changes in configurations and relationships between AWS resources, review detailed resource configuration histories, and determine your overall compliance against the configurations that are specified in your internal guidelines. This enables you to simplify compliance auditing, security analysis, change management, and operational troubleshooting.
+
+As you can see in the AWS Config Dashboard screen capture shown here, AWS Config keeps an inventory listing of all resources that exist in the account, and it then checks for configuration rule compliance and resource compliance. Resources that are found to be noncompliant are flagged, which alerts you to the configuration issues that should be addressed within the account.
+
+AWS Config is a Regional service. To track resources across Regions, enable it in every Region that you use. AWS Config offers an aggregator feature that can show an aggregated view of resources across multiple Regions and even multiple accounts.
+
+![](/mathnotes/pics/AWSpic/屏幕截图 2021-01-08 204730.png)
+
+AWS Artifact provides on-demand downloads of AWS security and compliance documents, such as AWS ISO certifications, Payment Card Industry (PCI), and Service Organization Control (SOC) reports. You can submit the security and compliance documents (also known asaudit artifacts) to your auditors or regulators to demonstrate the security and compliance of the AWS infrastructure and services that you use. You can also use these documents as guidelines to evaluate your own cloud architecture and assess the effectiveness of your company's internal controls. AWS Artifact provides documents about AWS only. AWS customers are responsible for developing or obtaining documents that demonstrate the security and compliance of their companies.
+
+You can also use AWS Artifact to review, accept, and track the status of AWS agreements such as the Business Associate Agreement (BAA). A BAA typically is required for companies that are subject to HIPAA to ensure that protected health information (PHI) is appropriately safeguarded. With AWS Artifact, you can accept agreements with AWS and designate AWS accounts that can legally process restricted information. You can accept an agreement on behalf of multiple accounts. To accept agreements for multiple accounts, use AWS Organizations to create an organization.
