--- a/_posts/2021-01-29-UMDNotes.md
+++ b/_posts/2021-01-29-UMDNotes.md
@@ -28,3 +28,14 @@ Basic computational methods for interpolation, least squares, approximation, num
 <img src="{{ '/docs/AMSC460preview.png' | relative_url }}">
 
 <a href="/mathnotes/docs/AMSC460.pdf">Open to see notes</a>
+
+## <font color= 977FD7> Math 402 - Algebraic Structures</font>
+
+#### Description
+The course covers the basics of groups, rings, integral domains and fields. There will be a detailed study of several groups, and a study of the properties of integers and polynomials. Emphasis is on the origin of the mathematical ideas studied and the logical structure of the subject. (This course is not open to mathematics graduate students. Credit will only be given for one of Math 402 and 403.) The last item in the list of topics could be replaced by other topics in algebra, for example, coding theory or crystallographic groups.
+
+\<Preview>
+
+<img src="{{ '/docs/MATH402preview.png' | relative_url }}">
+
+<a href="/mathnotes/docs/MATH402.pdf">Open to see notes</a>
