--- a/_posts/2021-01-29-UMDNotes.md
+++ b/_posts/2021-01-29-UMDNotes.md
@@ -17,6 +17,19 @@ math: true
   </script>
 
 
+  ## <font color= 977FD7> AMSC 460 Computational Methods</font>
+  #### <font color= E675A7> I am working on this right now >w<</font>
+  #### Description
+  The goal of this course is to introduce the students to the modern mathematical techniques which are applied in signal processing and which are used in a variety of areas, ranging from engineering to medicine and finance. Topics include: Applied Linear Algebra, Fourier Series, Discrete Fourier Transform, Fourier Transform, Shannon Sampling Theorem, Wavelet Bases, Multiresolution Analysis, and Discrete Wavelet Transform. Emphasis will be placed upon mathematical foundations of applicable algorithms, as well as on the ability to implement these algorithms.
+
+  \<Preview>
+
+  <img src="{{ '/docs/MATH416preview.png' | relative_url }}">
+
+  <a href="/mathnotes/docs/MATH416.pdf">Open to see notes</a>
+
+
+
 
 ## <font color= 977FD7> AMSC 460 Computational Methods</font>
 
