--- a/_posts/2020-10-09-Jacobian.md
+++ b/_posts/2020-10-09-Jacobian.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Jacobian matrix In MatLab
+title: MatLab - Jacobian matrix
 date: 2020-10-09 23:18 +0800
 tags: [Notes]
 math: true
@@ -29,7 +29,7 @@ math: true
           all[i].SourceElement().parentNode.className += ' has-jax';
       }});
   </script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>  
-  
+
 ## <font color= 977FD7> Jacobian matrix</font>
 
 #### Syntax
