--- a/_posts/2020-10-09-Jacobian.md
+++ b/_posts/2020-10-09-Jacobian.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: MatLab - Jacobian matrix
+title: Math - Jacobian matrix
 date: 2020-10-09 23:18 +0800
 tags: [Notes]
 math: true
